--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import "./styles/base";
 @import "./styles/cart";
 @import "./styles/message";
+@import "./styles/popup";
 
 a {
   color: inherit;
@@ -16,120 +17,6 @@ body {
   margin: 0;
   padding: 0;
   font: 100% $font-stack;
-}
-
-/* Popup style */
-.popup-box {
-  position: fixed;
-  background: $header-background-color;
-  background-image: linear-gradient($header-background-color 30%, black);
-  z-index: 200;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  text-align: left;
-  display: grid;
-  grid-template-columns: 1fr 0.9fr;
-  grid-template-rows: 0.7fr 2fr;
-  .beerName {
-    color: white;
-    font-size: 60px;
-    float: left;
-    margin: 0;
-    margin-left: 100px;
-  }
-  .category {
-    color: white;
-    font-size: 30px;
-    float: left;
-    margin: 0;
-    margin-left: 100px;
-    line-height: 70px;
-  }
-}
-
-.box {
-  position: absolute;
-  margin: 0 auto;
-  height: 60%;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #fff;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
-  padding: 50px 100px;
-  overflow: auto;
-  font-size: 20px;
-  h1 {
-    font-size: 35px;
-  }
-}
-.boxes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-.small-box {
-  height: 15vw;
-  width: 15vw;
-  margin: 5vw 0;
-  background-color: $background-opacity-color;
-  border-radius: 30px;
-  text-align: center;
-  display: grid;
-
-  p {
-    align-self: center;
-    color: $header-background-color;
-    font-size: 15px;
-    line-height: 35px;
-
-    span {
-      font-size: 40px;
-    }
-  }
-}
-.arrow {
-  cursor: pointer;
-  height: 50px;
-  transform: scaleX(-1);
-  margin-top: 75px;
-  float: left;
-  margin-left: 100px;
-}
-.cart {
-  height: 50px;
-  float: right;
-  margin-top: 75px;
-  justify-self: end;
-  margin-right: 100px;
-}
-.beerTop {
-  display: flex;
-  flex-flow: column;
-  grid-row: 2;
-}
-.popup-img {
-  grid-row: 2;
-  grid-column: 2;
-  height: 20vw;
-  border-radius: 40px;
-  z-index: 1;
-  justify-self: center;
-  margin-bottom: 85%;
-}
-.close-icon {
-  cursor: pointer;
-  position: fixed;
-  right: calc(15% - 30px);
-  top: calc(100vh - 85vh - 33px);
-  background: #ededed;
-  line-height: 20px;
-  text-align: center;
-  border: 1px solid #999;
-  font-size: 16px;
-  padding: 5px;
 }
 
 // Router
