--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -71,6 +71,7 @@
       border: none;
       background-color: transparent;
       font-size: 1.5rem;
+      cursor: pointer;
     }
     p {
       font-size: 1.3rem;
@@ -130,6 +131,7 @@
     font-weight: 100;
     padding-left: 1vw;
     padding-right: 1vw;
+    margin-top: 0;
   }
 }
 
@@ -313,5 +315,19 @@
   .total-price {
     margin-right: 34vw;
     font-size: 2.5vw;
+  }
+}
+
+/*------------------------------MEDIAQUERY 1300px-----------------------*/
+
+@media screen and (min-width: 1300px) {
+  .CartItem {
+    .cart-img {
+      width: 44%;
+      height: 10vw;
+    }
+    .bin {
+      width: 40%;
+    }
   }
 }
