--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -266,6 +266,14 @@ form {
   }
 }
 
+/*------------------------------MEDIAQUERY 1000px-----------------------*/
+
+@media screen and (min-width: 1000px) {
+  .top .total-price-form h2 {
+    font-size: 3.5rem;
+  }
+}
+
 /*------------------------------MEDIAQUERY 1200px-----------------------*/
 
 @media screen and (min-width: 1200px) {
