some small changes in details

--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -93,9 +93,9 @@ $header-margin-left-mobile: 14vw;
 .popup-img {
   grid-row: 2;
   grid-column: 2;
-  width: 40%;
+  width: 70%;
   object-fit: cover;
-  height: 20vw;
+  height: 32vw;
   border-radius: 20px;
   z-index: 1;
   justify-self: center;
@@ -156,7 +156,7 @@ $header-margin-left-mobile: 14vw;
   }
   .popup-box {
     .beerName {
-      font-size: 32px;
+      font-size: 44px;
       margin-top: -12vw;
     }
     .category {
@@ -181,11 +181,6 @@ $header-margin-left-mobile: 14vw;
 /*------------------------------MEDIAQUERY 700px-----------------------*/
 
 @media screen and (min-width: 700px) {
-  .popup-box .popup-img {
-    margin-top: -6vh;
-    width: 30%;
-    height: 14vw;
-  }
   .popup-box .price {
     font-size: 22px;
   }
@@ -194,6 +189,11 @@ $header-margin-left-mobile: 14vw;
 /*------------------------------MEDIAQUERY 800px-----------------------*/
 
 @media screen and (min-width: 800px) {
+  .popup-box .popup-img {
+    width: 65%;
+    height: 28vw;
+    margin-top: -8vh;
+  }
   .popup-box .beerName {
     font-size: 38px;
   }
@@ -220,12 +220,23 @@ $header-margin-left-mobile: 14vw;
 
 @media screen and (min-width: 1000px) {
   .popup-box .popup-img {
-    width: 22%;
-    height: 12vw;
+    width: 50%;
+    height: 22vw;
   }
-  .popup-box .beerName {
-    margin-top: -8vw;
+
+  .popup-box {
+    .beerName {
+      font-size: 60px;
+      margin-top: -8vw;
+    }
+    .category {
+      font-size: 34px;
+    }
+    .price {
+      font-size: 24px;
+    }
   }
+
   .small-box {
     width: 13vw;
     height: 13vw;
@@ -236,11 +247,30 @@ $header-margin-left-mobile: 14vw;
   }
 }
 
+/*------------------------------MEDIAQUERY 1100px-----------------------*/
+
+@media screen and (min-width: 1100px) {
+  .popup-box .popup-img {
+    width: 50%;
+    height: 22vw;
+  }
+}
+
+/*------------------------------MEDIAQUERY 1200px-----------------------*/
+
+@media screen and (min-width: 1200px) {
+  .popup-box .popup-img {
+    width: 45%;
+    height: 18vw;
+    margin-bottom: 70%;
+  }
+}
+
 /*------------------------------MEDIAQUERY 1360px-----------------------*/
 
 @media screen and (min-width: 1360px) {
   .popup-box .beerName {
-    margin-top: 0;
+    margin-top: -7vw;
   }
   .box {
     padding-right: 28vw;
@@ -251,11 +281,19 @@ $header-margin-left-mobile: 14vw;
   }
 }
 
+/*------------------------------MEDIAQUERY 1400px-----------------------*/
+
+@media screen and (min-width: 1400px) {
+  .popup-box .popup-img {
+    margin-bottom: 62%;
+  }
+}
+
 /*------------------------------MEDIAQUERY 1500px-----------------------*/
 
 @media screen and (min-width: 1500px) {
   .popup-box .beerName {
-    margin-top: 3vw;
+    margin-top: 1vw;
   }
   .popup-box .popup-img {
     margin-top: 3vh;
