--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -125,10 +125,12 @@ $header-margin-left-mobile: 14vw;
   .arrow {
     height: 40px;
     margin-top: 16vw;
+    margin-left: 4vw;
   }
   .popup-box {
     .beerName {
-      margin-top: -12vw;
+      margin-top: -8vw;
+      font-size: 4vw;
     }
     .popup-img {
       margin-top: -4vh;
@@ -157,7 +159,7 @@ $header-margin-left-mobile: 14vw;
   .popup-box {
     .beerName {
       font-size: 44px;
-      margin-top: -12vw;
+      margin-top: -8vw;
     }
     .category {
       font-size: 30px;
@@ -227,13 +229,15 @@ $header-margin-left-mobile: 14vw;
   .popup-box {
     .beerName {
       font-size: 60px;
-      margin-top: -8vw;
+      margin-top: -6vw;
     }
     .category {
       font-size: 34px;
+      margin-top: -30px;
     }
     .price {
       font-size: 24px;
+      margin-top: 10px;
     }
   }
 
