--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import "./styles/cart";
 @import "./styles/message";
 @import "./styles/popup";
+@import "./styles/sidebar";
 
 a {
   color: inherit;
@@ -95,6 +96,21 @@ body {
   align-self: center;
   left: 50px;
 }
+.order-id {
+  position: fixed;
+  bottom: 0px;
+  cursor: pointer;
+  z-index: 101;
+  font-weight: 600;
+  align-self: center;
+  color: $header-background-color;
+  right: 50px;
+  font: 100% $font-home-page-title-stack;
+  h1 {
+    font-size: 2.1em;
+    font-weight: bold;
+  }
+}
 .back-arrow {
   margin-right: 10px;
 }
@@ -153,6 +169,21 @@ body {
       }
     }
   }
+  .order-id {
+    position: fixed;
+    top: 83px;
+    cursor: pointer;
+    z-index: 101;
+    font-weight: 600;
+    align-self: center;
+    color: $header-background-color;
+    left: 20px;
+    font: 100% $font-home-page-title-stack;
+    h1 {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+  }
 }
 // Mobile breack point horizontal
 @media only screen and (max-width: 900px) and (min-width: 550px) {
@@ -205,6 +236,21 @@ body {
           margin-top: -1px;
         }
       }
+    }
+  }
+  .order-id {
+    position: fixed;
+    bottom: -13px;
+    cursor: pointer;
+    z-index: 101;
+    font-weight: 600;
+    align-self: center;
+    color: $header-background-color;
+    right: 50px;
+    font: 100% $font-home-page-title-stack;
+    h1 {
+      font-size: 2em;
+      font-weight: bold;
     }
   }
 }
